changing ott changes